k8s/prod/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: payloadapi-prod
  labels:
    name: payloadapi-prod
    environment: prod
